add book applications
